--- a/src/app/modules/projects/pages/project-management/project-management.component.html
+++ b/src/app/modules/projects/pages/project-management/project-management.component.html
@@ -13,7 +13,7 @@
 
     <!-- Tab -->
     <p-tabPanel header="Project" leftIcon="pi pi-briefcase">
-        <h5 class="mt-4">Project Cost Performance Reports:</h5>
+        <h5 class="mt-4">Project:</h5>
         <h1 *ngIf="project" class="display-4">{{project.projectName}}</h1>
         <div class="dropdown-divider mb-3"></div>
         <app-project-view class=""></app-project-view>
