--- a/src/app/modules/employee/pages/employee-reset-pw/employee-reset-pw.component.html
+++ b/src/app/modules/employee/pages/employee-reset-pw/employee-reset-pw.component.html
@@ -11,7 +11,7 @@
                         <div *ngIf="f.username.errors.required">Username is required</div>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group" *ngIf="false">
                     <label for="password">Old Password</label>
                     <input type="password" formControlName="password" class="form-control"
                         [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
