fix employee creation validation rule

--- a/src/app/modules/employee/pages/employee-creation/employee-creation.component.html
+++ b/src/app/modules/employee/pages/employee-creation/employee-creation.component.html
@@ -3,7 +3,7 @@
         <!-- Title -->
         <h3 class="display-4">Create Employee</h3>
         <!-- alert -->
-        <shared-alertPromp [alerts]="alerts"></shared-alertPromp>
+        <!-- <shared-alertPromp [alerts]="alerts"></shared-alertPromp> -->
 
 
         <app-employee [employee]="employee" [mode]="mode" [validUsername]="validUsername"
