add validation rules on employee creation/edit page that supervisor / labour grade cannot be empty

--- a/src/app/modules/employee/pages/employee-edit/employee-edit.component.html
+++ b/src/app/modules/employee/pages/employee-edit/employee-edit.component.html
@@ -3,7 +3,7 @@
         <!-- Title -->
         <h3 class="display-4">Employee Edit</h3>
         <!-- alert -->
-        <shared-alertPromp [alerts]="alerts"></shared-alertPromp>
+        <!-- <shared-alertPromp [alerts]="alerts"></shared-alertPromp> -->
 
         <app-employee [employee]="employee" [mode]="mode" [alerts]="alerts" *ngIf="employee"
             [validUsername]="validUsername" [validEmployeeCode]="validEmployeeCode" (restPw)="openModal(template)">
