Typo fixes, spelling & grammar checks

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -12,7 +12,7 @@
 
     </div>
     <div class="card">
-        <h4 class="card-header">Login</h4>
+        <h4 class="card-header">Log in</h4>
         <div class="card-body">
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
@@ -33,9 +33,9 @@
                 </div>
                 <button [disabled]="loading" class="btn btn-primary">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                    Login
+                    Log in
                 </button>
-                <div *ngIf="error" class="alert alert-danger mt-3 mb-0">User Name and Password doesn't match</div>
+                <div *ngIf="error" class="alert alert-danger mt-3 mb-0">User Name and Password don't match. Please try again.</div>
             </form>
         </div>
     </div>
