--- a/src/app/modules/employee/pages/employee-change-approver/employee-change-approver.component.html
+++ b/src/app/modules/employee/pages/employee-change-approver/employee-change-approver.component.html
@@ -1,8 +1,8 @@
 <div class="card mx-1">
     <div class="card-body">
-        <h3 class="display-4">Chanage Timesheet Approver</h3>
+        <h3 class="display-4">Change Timesheet Approver</h3>
         <div class="dropdown-divider "></div>
-        <p class="lead">The table below lists all your employees that you supervise.</p>
+        <p class="lead">The table below lists all the employees that you supervise.</p>
 
         <p-table #dt [columns]="cols" [value]="displayEmployee" [paginator]="true" [rows]="10"
             [style]="{'text-align':'center'}">
@@ -18,7 +18,7 @@
                     <th style="width: 120px;">Employee ID</th>
                     <th>Employee Name</th>
                     <th>Approver</th>
-                    <th>Activation</th>
+                    <th>Activation Status</th>
                     <th style="width: 250px;"></th>
                 </tr>
                 <tr>
