--- a/src/app/modules/projects/pages/project-list-supervisor/project-list-supervisor.component.html
+++ b/src/app/modules/projects/pages/project-list-supervisor/project-list-supervisor.component.html
@@ -5,7 +5,7 @@
 
         <div class="d-flex flex-row-reverse">
         </div>
-        <h3 class="lead">The table below lists all your project and you can assign members to work on them.</h3>
+        <h3 class="lead">The table below lists all your projects.  Click the <b>"Manage Members"</b> button to assign employees to work on them.</h3>
         <p-table #dt [columns]="cols" [value]="displayProject" [paginator]="true" [rows]="10"
             [style]="{'text-align':'center'}">
             <ng-template pTemplate="caption">
