--- a/src/app/modules/timesheets/pages/timesheet-approver-view-list/timesheet-approver-view-list.component.html
+++ b/src/app/modules/timesheets/pages/timesheet-approver-view-list/timesheet-approver-view-list.component.html
@@ -2,7 +2,7 @@
     <div class="card-body">
         <h3 class="display-4">Pending Timesheet List</h3>
         <div class="dropdown-divider "></div>
-        <h3 class="lead">The table below lists all pending timesheet that waiting your approval.</h3>
+        <h3 class="lead">The table below lists all pending timesheets that are waiting your approval.</h3>
 
         <p-table #dt [columns]="cols" [value]="displayTimesheet" [paginator]="true" [rows]="10"
             [style]="{'text-align':'center'}">
