--- a/src/app/modules/projects/pages/project-management/project-management.component.html
+++ b/src/app/modules/projects/pages/project-management/project-management.component.html
@@ -16,7 +16,7 @@
         <h5 class="mt-4">Project:</h5>
         <h1 *ngIf="project" class="display-4">{{project.projectName}}</h1>
         <div class="dropdown-divider mb-3"></div>
-        <app-project-view class=""></app-project-view>
+        <app-project-view class="" [project]="project"></app-project-view>
     </p-tabPanel>
 
     <!-- Tab -->
