--- a/src/app/modules/wp/pages/wp-create/wp-create.component.html
+++ b/src/app/modules/wp/pages/wp-create/wp-create.component.html
@@ -5,7 +5,7 @@
         <!-- Title -->
         <h3 class="display-4">Create Work Package</h3>
         <!-- alert -->
-        <shared-alertPromp [alerts]="alerts"></shared-alertPromp>
+        <!-- <shared-alertPromp [alerts]="alerts"></shared-alertPromp> -->
 
 
         <app-wp [wp]="wp" [mode]="mode" [validWpCode]="validWpCode" (fireValidateWPCode)="validateWpCode()"
