--- a/src/app/modules/wp/pages/wp-view/wp-view.component.html
+++ b/src/app/modules/wp/pages/wp-view/wp-view.component.html
@@ -7,7 +7,7 @@
 
 
 <app-wp *ngIf="wp" [wp]="wp" [mode]="mode" [validWpCode]="validWpCode" (changeWpCode)="validateWpCode()"
-    [alerts]="alerts"></app-wp>
+    [alerts]="alerts" [projectId]="projectId"></app-wp>
 <!-- 
     </div>
 </div> -->
