--- a/src/app/shared/components/timesheet/timesheet.component.html
+++ b/src/app/shared/components/timesheet/timesheet.component.html
@@ -171,6 +171,7 @@
             <li *ngIf="validationError['workPackageId']">{{validationError['workPackageId'].msgs}}</li>
             <li *ngIf="validationError['weekEndingIn']">{{validationError['weekEndingIn'].msgs}}</li>
             <li *ngIf="validationError['row']">{{validationError['row'].msgs}}</li>
+            <li *ngIf="validationError['over24']">{{validationError['over24'].msgs}}</li>
         </ul>
         <hr>
         <p class="mb-0"></p>
