--- a/src/app/core/layout/toolbar/toolbar.component.html
+++ b/src/app/core/layout/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-theme">
+<nav class="navbar navbar-dark bg-theme toolbarSize">
     <div>
         <span class="navbar-brand mb-0 h1 title">
             Gerg's Beans
@@ -7,7 +7,7 @@
             {{currentUser.credentialId}}
         </span>
         <span class="navbar-text">
-            version v1.1.0
+            version v1.1.1
         </span>
 
     </div>
