--- a/src/app/modules/wp/pages/wp-edit/wp-edit.component.html
+++ b/src/app/modules/wp/pages/wp-edit/wp-edit.component.html
@@ -7,7 +7,7 @@
 
 
 <app-wp *ngIf="wp" [wp]="wp" [mode]="mode" [validWpCode]="validWpCode" (changeWpCode)="validateWpCode()"
-    (fireValidateWPCode)="validateWpCode()" [alerts]="alerts"></app-wp>
+    (fireValidateWPCode)="validateWpCode()" [alerts]="alerts" [projectId]="projectId"></app-wp>
 
 <!-- Action section-->
 <div class="dropdown-divider my-3"></div>
