fix typo, show error message, edit timesheet dropdown not populated

--- a/src/app/modules/reports/pages/project-report-view/project-report-view.component.html
+++ b/src/app/modules/reports/pages/project-report-view/project-report-view.component.html
@@ -76,7 +76,7 @@
                     <!-- duriation  -->
                     <div class="input-group ">
                         <div class="input-group-prepend">
-                            <span class="input-group-text">Report Date</span>
+                            <span class="input-group-text">Report Range</span>
                         </div>
                         <input type="text" class="form-control"
                             value="{{projectReport.startDate| date}}  To  {{projectReport.endDate| date}}"
