remove home page text placeholder, dispaly 100 row on the list

--- a/src/app/modules/projects/pages/project-list-supervisor/project-list-supervisor.component.html
+++ b/src/app/modules/projects/pages/project-list-supervisor/project-list-supervisor.component.html
@@ -5,8 +5,9 @@
 
         <div class="d-flex flex-row-reverse">
         </div>
-        <h3 class="lead">The table below lists all your projects.  Click the <b>"Manage Members"</b> button to assign employees to work on them.</h3>
-        <p-table #dt [columns]="cols" [value]="displayProject" [paginator]="true" [rows]="10"
+        <h3 class="lead">The table below lists all your projects. Click the <b>"Manage Members"</b> button to assign
+            employees to work on them.</h3>
+        <p-table #dt [columns]="cols" [value]="displayProject" [paginator]="true" [rows]="100"
             [style]="{'text-align':'center'}">
             <ng-template pTemplate="caption">
                 <div style="text-align: center">
